<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_bansos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="16dp"
    app:cardBackgroundColor="@color/forth"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/city"
            android:textColor="@color/second"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TVName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/student_s_name"
            android:textColor="@color/main"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TVSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_medium"
            android:scrollbars="vertical"
            android:text="@string/school"
            android:textColor="@color/third"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>