<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/LLMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="6">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/p_toolbar"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="0"
            android:background="@color/main">

            <TextView
                android:id="@+id/tvStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semi_bold"
                android:text="@string/students"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="31dp"/>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/LLDataEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_weight="6"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/IVPDataEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/data_empty"
                android:src="@drawable/data_empty"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/TVPDataEmpty1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/no_students_yet"
                    android:textAlignment="center"
                    android:textColor="@color/main"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TVPDataEmpty2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/data_not_found"
                    android:textAlignment="center"
                    android:textColor="@color/second"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_data"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>